# ttod

./: .gitignore  __main__.py  curses_tui.py  list  options.yaml  pyproject.toml  readme.md  settings.yaml  tmp.py  truths
data/question_sets/en/: dares.yaml  truths.yaml  tui_dialogs.yaml
data/question_sets/es/: dares.yaml  tui_dialogs.yaml
game/: curses_tui.py.old  player.py  tod_game.py
translations/en/: dares  dares.yaml  truths  truths.yaml  tui_dialogs.yaml
translations/es/: truths.yaml
ttod/game/: game.py  loader.py  player.py
ttod/ui/: tui.py
