[tool.poetry]
name = "ttod"
version = "2.0.0"
description = "A terminal truth or dare"
authors = ["Borja Martinena <bmartinenac@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blessed = "^1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
